# linkheader

./: LICENSE  README.md  pyproject.toml
src/linkedin_banner/: generator.py
src/linkheader/: __init__.py  cli.py  exceptions.py  favicon.py  generator.py  models.py  palette.py  qr.py
