[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-banner"
version = "0.2.2"
description = "Generate LinkedIn profile banner images with QR codes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.1",
    "qrcode[pil]",
    "typer[all]",
    "rich",
    "pydantic",
    "httpx>=0.27",
]

[project.scripts]
linkedin-banner = "linkedin_banner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_banner"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
